--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hope You're Doing Well</title>
+  <title>Hope Message</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
   <div id="typewriter"></div>
 
   <script>
-    const text = "I hope you are doing well <3";
+    const text = "Everything will be okay, I hope everything will be normal and perfect again. I will be there anytime <3";
     let i = 0;
 
     function typeWriter() {
@@ -48,3 +48,4 @@
   </script>
 </body>
 </html>
+
