--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: #121212; /* Dark background */
+      background-color: #121212; 
       margin: 0;
     }
     #typewriter {
       font-size: 24px;
-      color: #ffffff; /* White text */
+      color: #ffffff; 
     }
     .typing {
-      border-right: 2px solid #ffffff; /* White typing cursor */
+      border-right: 2px solid #ffffff;
       white-space: nowrap;
       overflow: hidden;
     }
@@ -36,7 +36,7 @@
       if (i < text.length) {
         document.getElementById("typewriter").innerHTML += text.charAt(i);
         i++;
-        setTimeout(typeWriter, 100); // Adjust typing speed here
+        setTimeout(typeWriter, 100); 
       }
     }
 
