--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hope Message</title>
+  <title>meow</title>
  <style>
 body {
   font-size: 24px;
@@ -35,7 +35,7 @@ body {
   <div id="typewriter"></div>
 
   <script>
-    const text = "Everything will be okay, I hope everything will be normal and perfect again. I will be there anytime <3";
+    const text = "We have known each other for a long time and I loved every bit of time spent with you, I pray and hope only good things come your way. Whatever happens, I've always got your back <3";
     let i = 0;
 
     function typeWriter() {
